// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given that Header is called with only title props, should match Header snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 1,
      },
      {
        "backgroundColor": "#EBEBEB",
      },
      {
        "borderColor": "#DEDEDE",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 82.14285714285714,
        "marginHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "bold",
            "left": 0,
            "marginHorizontal": 140,
            "position": "absolute",
            "right": 0,
            "textAlign": "center",
          },
          {
            "color": "#181818",
          },
        ]
      }
    >
      Header
    </Text>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`given that Header is called with title and headerLeft props, should match Header snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 1,
      },
      {
        "backgroundColor": "#EBEBEB",
      },
      {
        "borderColor": "#DEDEDE",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 82.14285714285714,
        "marginHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "bold",
            "left": 0,
            "marginHorizontal": 140,
            "position": "absolute",
            "right": 0,
            "textAlign": "center",
          },
          {
            "color": "#181818",
          },
        ]
      }
    >
      Header with left button
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginRight": 20,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 36,
              "margin": 16,
              "textAlign": "center",
            },
            {
              "color": "#007aa3",
            },
          ]
        }
      >
        Reset
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`given that Header is called with title and headerRight props, should match Header snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 1,
      },
      {
        "backgroundColor": "#EBEBEB",
      },
      {
        "borderColor": "#DEDEDE",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 82.14285714285714,
        "marginHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "bold",
            "left": 0,
            "marginHorizontal": 140,
            "position": "absolute",
            "right": 0,
            "textAlign": "center",
          },
          {
            "color": "#181818",
          },
        ]
      }
    >
      Header with right button
    </Text>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 36,
              "margin": 16,
              "textAlign": "center",
            },
            {
              "color": "#007aa3",
            },
          ]
        }
      >
        Done
      </Text>
    </View>
  </View>
</View>
`;

exports[`given that Header is called with title, headerLeft and headerRight props, should match Header snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 1,
      },
      {
        "backgroundColor": "#EBEBEB",
      },
      {
        "borderColor": "#DEDEDE",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 82.14285714285714,
        "marginHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "bold",
            "left": 0,
            "marginHorizontal": 140,
            "position": "absolute",
            "right": 0,
            "textAlign": "center",
          },
          {
            "color": "#181818",
          },
        ]
      }
    >
      Header with left and right buttons
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginRight": 20,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 36,
              "margin": 16,
              "textAlign": "center",
            },
            {
              "color": "#007aa3",
            },
          ]
        }
      >
        Reset
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 36,
              "margin": 16,
              "textAlign": "center",
            },
            {
              "color": "#007aa3",
            },
          ]
        }
      >
        Done
      </Text>
    </View>
  </View>
</View>
`;
